nicer scrollbar in desktop and fixed centering on cards in desktop

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -180,6 +180,18 @@ body > * {
   justify-items: center;
   padding-block: 3.83125rem;
   position: relative;
+ 
+  // scrollbar-width: thin;
+  // scrollbar-color: transparent transparent;
+
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: rgba(0,0,0,0.3);
+    border-radius: 1rem;
+  }
 
   &::before {
     content: '';
@@ -204,7 +216,7 @@ body > * {
     align-items: stretch;
     justify-content: flex-start;
     gap: var(--grid-margin);
-    padding: 5rem calc(var(--grid-margin)) 5rem calc(var(--grid-margin));
+    padding: 2rem calc(var(--grid-margin)) 5rem calc(var(--grid-margin));
     height: 100%;
     max-height: none;
     overflow-y: auto;
@@ -228,10 +240,12 @@ body > * {
   box-shadow: 3px 4px 10px 10px rgba(194, 230, 237, 0.5);
   grid-column: 1 / span 6;
   justify-self: center;
+  max-width: 21.125rem;
 
     @media (min-aspect-ratio: 1/1) {
-      max-width: 25rem;
       align-self: center;
+      align-items: center;
+      text-align: center;
     }
 }
 
@@ -322,6 +336,7 @@ body > * {
   .basket-header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 1.625rem 1.5625rem 1rem 1.25rem;
     border-bottom: solid 1px #B8B8B8;
 
@@ -335,6 +350,10 @@ body > * {
 
     .basket-close-icon {
       cursor: pointer;
+      width: 0.875rem;
+      height: 0.875rem;
+      flex: 0 0 auto;
+      display: inline-block;
     }
   }
 
